--- a/app/src/main/res/drawable/shape_circle.xml
+++ b/app/src/main/res/drawable/shape_circle.xml
@@ -1,8 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/transparent" />
-    <size
-        android:width="48dp"
-        android:height="48dp" />
-    <corners android:radius="24dp" />
+<!-- res/drawable/circle_background.xml -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
+    <solid android:color="#FFFFFF" />
+    <stroke android:width="2dp" android:color="#CCCCCC" />
 </shape>
